--- a/Projeto_Web/pag1.html
+++ b/Projeto_Web/pag1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="layout.css">
+  <link rel="stylesheet" href="layout1.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
@@ -24,9 +24,10 @@
       <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="flex-sm-fill text-sm-center nav-link active" href="#">Home</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="Pg002/pag2.html">Produtos</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="../Projeto_Web/pg003/home 1.html">Peças e Manutenção</a>
-        <!-- <a class="flex-sm-fill text-sm-center nav-link disabled" href="#">Desativado</a> -->
+        <a class="flex-sm-fill text-sm-center nav-link" href="./pg003/Manutenção.html">Peças e Manutenção</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="#">Fale Conosco</a>
       </nav>
+
 
     </div>
     <section class="carrossel">
