--- a/Projeto_Web/pg003/Manutenção.html
+++ b/Projeto_Web/pg003/Manutenção.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="icon" type="imagen/png" href="../pg003/ferramenta.png">
     <title>Manutenção </title>
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="layout3.css">
     
 </head>
 <body>
@@ -13,16 +13,15 @@
     <h1>Sem Limites Motos </h1>
     <img src="imagens/logo_tranp - Atalho.lnk" alt="">
   </header>
-
-
-    <nav class="navBar" id="menu">
-        <ul>
-            <li><a href="../pag1.html">Home</a></li>
-            <li><a href="#">troca de óleo</a></li>
-            <li><a href="#">troca de peças</a></li>
-            <li><a href="../Pg002/pag2.html">acesorios</a></li>
-        </ul>
+  <main>
+  <div id="menu">
+    <nav class="nav nav-pills flex-column flex-sm-row">
+      <a class="flex-sm-fill text-sm-center nav-link " href="../pag1.html">Home</a>
+      <a class="flex-sm-fill text-sm-center nav-link" href="../Pg002/pag2.html">Produtos</a>
+      <a class="flex-sm-fill text-sm-center nav-link active" href="#">Peças e Manutenção</a>
     </nav>
+  
+  </div>
     <div class="card-deck">
         <div class="card"> 
           <img class="card-img-top" src="Untitled.jpeg" alt="Imagem de capa do card">
@@ -73,6 +72,7 @@
             </div>
         </div>
       </div>
+    </main>
         <footer class="footer">
           
             <img src="footer.png.jpeg" alt="">
