--- a/Projeto_Web/Pg002/pag2.html
+++ b/Projeto_Web/Pg002/pag2.html
@@ -27,7 +27,7 @@
 
     <div id="menu">
       <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link" href="../pag1.html">Home</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="../index.php">Home</a>
         <a class="flex-sm-fill text-sm-center nav-link active" href="#">Produtos</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="../pg003/Manutenção.html">Peças e Manutenção</a>
       </nav>
