--- a/Projeto_Web/pg003/Manutenção.html
+++ b/Projeto_Web/pg003/Manutenção.html
@@ -16,7 +16,7 @@
   <main>
   <div id="menu">
     <nav class="nav nav-pills flex-column flex-sm-row">
-      <a class="flex-sm-fill text-sm-center nav-link " href="../pag1.html">Home</a>
+      <a class="flex-sm-fill text-sm-center nav-link " href="../index.php">Home</a>
       <a class="flex-sm-fill text-sm-center nav-link" href="../Pg002/pag2.html">Produtos</a>
       <a class="flex-sm-fill text-sm-center nav-link active" href="#">Peças e Manutenção</a>
     </nav>
